--- a/about.html
+++ b/about.html
@@ -62,8 +62,11 @@
         <div class="row mb-4">
             <section class="col-lg-4 mb-8 tm-px-3">
                 <div class="tm-box-bordered p-5">
-                    <h3 class="tm-title-gray mb-3">Empowering Innovation for a Smarter Tomorrow</h3>
-                    <hr class="mb-4 tm-hr tm-hr-s">
+                    <div class=" mb-4 linebox">
+                        <h3 class="tm-title-gray mb-3">Empowering Innovation for a Smarter Tomorrow</h3>
+                        <hr class="mb-4 tm-hr tm-hr">
+                    </div>
+
                     <p class="mb-4">We are shaping the next chapter of Saudi innovation. By blending deep technical
                         expertise with a clear national vision, we design intelligent solutions that transform
                         challenges into opportunities.</p>
@@ -76,8 +79,11 @@
             </section>
 
             <div class=" col-md-5 mb-4">
-                <h3 class="tm-title-gray mb-4">About Lozi Core</h3>
-                <hr class="mb-5 tm-hr">
+                <div class=" mb-4 linebox">
+                    <h3 class="tm-title-gray mb-4">About Lozi Core</h3>
+                    <hr class="mb-5 tm-hr">
+                </div>
+
                 <p class="mb-5">
                     A Saudi institution specializing in providing artificial intelligence
                     solutions and technologies, aiming to empower both government
@@ -103,8 +109,11 @@
         <div class="row0">
 
             <div class="col-lg-5 col-md-5 mb-4 mr-0 ">
-                <h3 class="tm-title-gray mb-4">Why Us?</h3>
-                <hr class="mb-5 tm-hr">
+                <div class=" mb-4 linebox">
+                    <h3 class="tm-title-gray mb-4">Why Us?</h3>
+                    <hr class="mb-5 tm-hr">
+                </div>
+
                 <p class="mb-5">
                     <b>At Lozi Core, we believe that excellence in the world of artificial intelligence
                         starts with understanding needs and crafting tailored solutions. That's why we
@@ -129,8 +138,11 @@
             </div>
 
             <div id="Vesion" class="col-lg-5 col-md-5 mb-4 mr-0 mr-auto ml-sm-3">
-                <h3 class="tm-title-gray mb-4">Our Vesion</h3>
-                <hr class="mb-5 tm-hr">
+                <div class=" mb-4 linebox">
+                    <h3 class="tm-title-gray mb-4">Our Vesion</h3>
+                    <hr class="mb-5 tm-hr">
+                </div>
+
                 <p class="mb-5">
                     <b>Our vision is to become a leading Saudi institution in providing
                         artificial intelligence services and to be an active contributor to
@@ -152,8 +164,11 @@
             </div>
 
             <div class="col-lg-5 col-md-5 mb-4 mr-0 ">
-                <h3 class="tm-title-gray mb-4">Our Services</h3>
-                <hr class="mb-5 tm-hr">
+                <div class=" mb-4 linebox">
+                    <h3 class="tm-title-gray mb-4">Our Services</h3>
+                    <hr class="mb-5 tm-hr">
+                </div>
+
                 <p class="mb-5">
                     We provide a broad range of AI-driven solutions
                     designed to support organizations in their digital
