--- a/contact.html
+++ b/contact.html
@@ -63,15 +63,27 @@
         <div class="row">
             <div class="col-12">
                 <section class="tm-contact-form-box mx-auto mb-7">
-                    <h3 class="tm-title-gray mb-4 text-center">Contact Us</h3>
-                    <hr class="mb-5 tm-hr tm-hr-s mx-auto">
-                    <div class="contac">
-                        <div class="item"><i class="fa-solid fa-envelope"></i><p>m.alkhawaldeh@lozicore.com</p></div>
-                        <div class="item"><i class="fa-solid fa-envelope"></i><p>d.mansour@Lozicore.com</p></div>
-                        <div class="item"><i class="fa-solid fa-phone"></i><p>+966-535374935</p></div>
+                    <div class=" mb-4 linebox text-center mx-auto">
+                        <h3 class="tm-title-gray mb-4 text-center">Contact Us</h3>
+                        <hr class="mb-5 tm-hr tm-hr-s mx-auto">
                     </div>
-                    <h3 class="tm-title-gray mb-4 text-center">Or Send Us An Email</h3>
-                    <hr class="mb-8 tm-hr tm-hr-s mx-auto">
+
+                    <div class="contac">
+                        <div class="item"><i class="fa-solid fa-envelope"></i>
+                            <p>m.alkhawaldeh@lozicore.com</p>
+                        </div>
+                        <div class="item"><i class="fa-solid fa-envelope"></i>
+                            <p>d.mansour@Lozicore.com</p>
+                        </div>
+                        <div class="item"><i class="fa-solid fa-phone"></i>
+                            <p>+966-535374935</p>
+                        </div>
+                    </div>
+                    <div class=" mb-4 linebox text-center mx-auto">
+                        <h3 class="tm-title-gray mb-4 text-center">Or Send Us An Email</h3>
+                        <hr class="mb-8 tm-hr tm-hr mx-auto">
+                    </div>
+
                     <form id="contact-form" action="" method="POST" name="form" class="tm-contact-form">
                         <div class="form-group">
                             <input type="text" name="name" class="form-control rounded-0" placeholder="Name" required />
@@ -101,8 +113,11 @@
                     </form>
                 </section>
                 <section class="tm-address-box mx-auto">
-                    <h3 class="tm-title-gray mb-4 text-center">Our Address</h3>
-                    <hr class="mb-5 tm-hr tm-hr-s mx-auto">
+                    <div class=" mb-4 linebox text-center mx-auto">
+                        <h3 class="tm-title-gray mb-4 text-center">Our Address</h3>
+                        <hr class="mb-5 tm-hr tm-hr mx-auto">
+                    </div>
+
                     <p class="mb-8 mx-auto text-center tm-address-text">Located in the Kingdom of Saudi Arabia —
                         advancing AI innovation from the region to the world.</p>
                     <div class="mapouter mb-60">
