--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div id="parallax-1" class="parallax-window" data-parallax="scroll" data-image-src="img/drone5.jpg" >
+    <div id="parallax-1" class="parallax-window" data-parallax="scroll" data-image-src="img/drone5.jpg">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
@@ -59,12 +59,14 @@
         </div>
     </div>
 
-    <div class="container-fluid mt-7">
-        <div class="row mb-66">
-            <section class="mb-10">
+    <div class="container-fluid mt-5">
+        <div class="row mb-11">
+            <section class="mb-60">
                 <div class="servicesint">
-                    <h3 class="tm-title-gray mb-4 ">Lozi Core</h3>
-                    <hr class="mb-5 tm-hr">
+                    <div class=" mb-4 linebox">
+                        <h3 class="tm-title-gray mb-4 ">Lozi Core</h3>
+                        <hr class="mb-5 tm-hr">
+                    </div>
                     <p class="mb-55">We provide a broad range of AI-driven solutions
                         designed to support organizations in their digital
                         transformation journey. With a strong commitment
@@ -76,8 +78,11 @@
             </section>
             <section class="col-lg-6 mb-lg-0 mb-5">
                 <div class="tm-intro">
-                    <h3 class="tm-title-gray mb-4 ">Who we are?</h3>
-                    <hr class="mb-5 tm-hr">
+                    <div class=" mb-4 linebox">
+                        <h3 class="tm-title-gray mb-4 ">Who we are?</h3>
+                        <hr class="mb-5 tm-hr">
+                    </div>
+
                     <p class="mb-5">A Saudi institution specializing in providing artificial intelligence
                         solutions and technologies, aiming to empower both government
                         and private sectors to transition towards smart efficient
@@ -90,8 +95,11 @@
                 </div>
             </section>
             <section class="col-lg-6">
-                <h3 class="tm-title-gray mb-4 ">Our Services</h3>
-                <hr class="mb-5 tm-hr">
+                <div class=" mb-4 linebox">
+                    <h3 class="tm-title-gray mb-4 ">Our Services</h3>
+                    <hr class="mb-5 tm-hr">
+                </div>
+
                 <div class="tm-strategy-box mb-5">
                     <img src="img/drone4.jpg" alt="Image" class="img-fluid tm-strategy-img">
                     <div class="tm-text-primary">
@@ -127,8 +135,11 @@
             <div class="container-fluid mt-7">
                 <div class="row">
                     <div class="col-lg-6 col-md-6 mb-4 mr-0 ml-auto">
-                        <h3 class="tm-title-gray mb-4 ">Why Us?</h3>
-                        <hr class="mb-5 tm-hr">
+                        <div class=" mb-4 linebox">
+                            <h3 class="tm-title-gray mb-4 ">Why Us?</h3>
+                            <hr class="mb-5 tm-hr">
+                        </div>
+
                         <p class="mb-5">
                             <b>At Lozi Core, we believe that excellence in the world of artificial intelligence
                                 starts with understanding needs and crafting tailored solutions. That's why we
@@ -152,8 +163,11 @@
                         </p>
                     </div>
                     <div class="col-lg-6 col-md-6 mb-4 mr-0 ml-auto">
-                        <h3 class="tm-title-gray mb-4 ">Our Vesion</h3>
-                        <hr class="mb-5 tm-hr">
+                        <div class=" mb-4 linebox">
+                            <h3 class="tm-title-gray mb-4 ">Our Vesion</h3>
+                            <hr class="mb-5 tm-hr">
+                        </div>
+
                         <p class="mb-5">
                             <b>Our vision is to become a leading Saudi institution in providing
                                 artificial intelligence services and to be an active contributor to
@@ -181,10 +195,13 @@
 
         </div>
         <!-- Services -->
-        <div class="row mb-6">
+        <div class="row mb-11">
             <section class="col-lg-6">
-                <h3 class="tm-title-gray mb-4 ">Training</h3>
-                <hr class="mb-5 tm-hr">
+                <div class=" mb-4 linebox">
+                    <h3 class="tm-title-gray mb-4 ">Training</h3>
+                    <hr class="mb-5 tm-hr">
+                </div>
+
                 <div class="tm-strategy-box mb-5">
                     <img src="img/ai2.jpg" alt="Image" class="img-fluid tm-strategy-img">
                     <div class="tm-text-primary">
@@ -219,7 +236,9 @@
                         <h4>Drone Programming & Simulation</h4>
                     </div>
                 </div>
-
+                <div class="more">
+                    <a href="services.html#Training" class="btn btn-primary">Veiw Details</a>
+                </div>
 
             </section>
             <div class="col-lg-5">
