--- a/services.html
+++ b/services.html
@@ -62,10 +62,13 @@
     <div class="container-fluid mt-7">
 
         <div class=" mb-lg-0 mb-5 pr-lg-5">
-            <section class="mb-10">
+            <section class="mb-11">
                 <div class="servicesint">
-                    <h3 class="tm-title-gray mb-4">Our services for your business growth</h3>
-                    <hr class="mb-5 tm-hr">
+                    <div class=" mb-4 linebox">
+                        <h3 class="tm-title-gray mb-4">Our services for your business growth</h3>
+                        <hr class="mb-5 tm-hr">
+                    </div>
+
                     <p class="mb-5">We provide a broad range of AI-driven solutions
                         designed to support organizations in their digital
                         transformation journey. With a strong commitment
@@ -78,11 +81,27 @@
 
 
 
-            <div class="container-fluid mt-7 mb-6">
-                <h3 class="tm-title-gray mb-4">Our Services</h3>
-                <hr class="mb-5 tm-hr">
+            <div class="container-fluid mt-7 mb-11">
+                <div class=" mb-4 linebox">
+                    <h3 class="tm-title-gray mb-4">Our Services</h3>
+                    <hr class="mb-5 tm-hr">
+                </div>
+
                 <div class="row2">
 
+
+                    <div class="col-lg-4 col-md-6">
+                        <div class="tm-bg-gray tm-box">
+                            <img src="img/chatbot.jpg" alt="Image" class="img-fluid mb-3 ">
+                            <h4 class="tm-text-primary tm-h3 mb-5">AI Chatbot</h4>
+                            <p>-Custom chatbot development tailored to business needs.</p>
+                            <p>-Voice-enabled assistants (customer service, personal, and enterprise use).</p>
+                            <p>-AI-powered customer support systems.</p>
+                            <p>-Low-latency chatbots for real-time interaction.</p>
+                            <p>-Chatbot integration with websites, mobile apps, and business platforms.</p>
+
+                        </div>
+                    </div>
 
 
 
@@ -112,18 +131,6 @@
                     </div>
 
 
-                    <div class="col-lg-4 col-md-6">
-                        <div class="tm-bg-gray tm-box">
-                            <img src="img/chatbot.jpg" alt="Image" class="img-fluid mb-3 ">
-                            <h4 class="tm-text-primary tm-h3 mb-5">AI Chatbot</h4>
-                            <p>-Custom chatbot development tailored to business needs.</p>
-                            <p>-Voice-enabled assistants (customer service, personal, and enterprise use).</p>
-                            <p>-AI-powered customer support systems.</p>
-                            <p>-Low-latency chatbots for real-time interaction.</p>
-                            <p>-Chatbot integration with websites, mobile apps, and business platforms.</p>
-
-                        </div>
-                    </div>
 
 
 
@@ -162,9 +169,12 @@
 
     <!--  services new  -->
 
-    <div class="container-fluid mt-7 mb-6">
-        <h3 class="tm-title-gray mb-4">Training</h3>
-        <hr class="mb-5 tm-hr">
+    <div id="Training" class="container-fluid mt-7 mb-6">
+        <div class=" mb-4 linebox">
+            <h3 class="tm-title-gray mb-4">Training</h3>
+            <hr class="mb-5 tm-hr">
+        </div>
+
         <div class="row2">
 
 
