--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
 
 
     <div class="container-fluid mt-7">
-        <div class="row0">
+        <div class="row" style="justify-content: space-between;">
 
             <div class="col-lg-5 col-md-5 mb-4 mr-0 ">
                 <div class=" mb-4 linebox">
@@ -139,7 +139,7 @@
 
             <div id="Vesion" class="col-lg-5 col-md-5 mb-4 mr-0 mr-auto ml-sm-3">
                 <div class=" mb-4 linebox">
-                    <h3 class="tm-title-gray mb-4">Our Vesion</h3>
+                    <h3 class="tm-title-gray mb-4">Our Vision</h3>
                     <hr class="mb-5 tm-hr">
                 </div>
 
