--- a/services.html
+++ b/services.html
@@ -247,13 +247,13 @@
 
             </p>
             <div class="col-lg-3 col-md-4 text-right">
-                <a target="_blank" href="https://www.facebook.com/" class="tm-social-link">
-                    <i class="fab fa-facebook fa-2x tm-social-icon"></i>
+                <a target="_blank" href="https://www.instagram.com/lozy_core?utm_source=qr&igsh=amR5MnVrbmtxdGtu" class="tm-social-link">
+                    <i class=" fab fa-brands fa-square-instagram fa-2x tm-social-icon"></i>
                 </a>
-                <a target="_blank" href="https://x.com" class="tm-social-link">
+                <a target="_blank" href="https://x.com/CoreLozi18252" class="tm-social-link">
                     <i class="fab fa-brands fa-2x fa-square-x-twitter tm-social-icon"></i>
                 </a>
-                <a target="_blank" href="https://linkedin.com" class="tm-social-link">
+                <a target="_blank" href="https://www.linkedin.com/company/109552125/admin/dashboard/" class="tm-social-link">
                     <i class="fab fa-linkedin fa-2x tm-social-icon"></i>
                 </a>
             </div>
